<resources>
    <string name="app_name">Chat\'cilys</string>

    <string name="bouton_label_vider">Vider</string>
    <string name="bouton_label_valider">Valider</string>
    <string name="bouton_label_listeMessage">Liste messages</string>
    <string name="bouton_label_envoyerMessage">Envoyer message</string>
    <string name="bouton_label_rafraichir">Rafraîchir</string>
    <string name="bouton_label_envoyer">Envoyer</string>
    <string name="bouton_label_register">Inscription</string>

    <string name="label_username">Nom d\'utilisateur</string>
    <string name="label_password">Mot de passe</string>
    <string name="label_message">Votre message</string>

    <string name="bouton_label_logout">Déconnexion</string>
</resources>
