<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.excilys.activities.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/usernameField"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:hint="@string/label_username" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordField"
        android:layout_below="@+id/usernameField"
        android:layout_alignLeft="@+id/usernameField"
        android:layout_alignStart="@+id/usernameField"
        android:layout_marginTop="61dp"
        android:hint="@string/label_password" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_below="@+id/passwordField"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/layout_footer"
        android:gravity="center_horizontal"
        android:layout_marginBottom="30dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bouton_label_vider"
            android:id="@+id/button_vider"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:onClick="listenerVider"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bouton_label_valider"
            android:id="@+id/button_valider"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:onClick="listenerValider"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bouton_label_register"
            android:id="@+id/button_register"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:onClick="listenerRegister"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Vous devez renseignez chacun des champs !"
        android:id="@+id/textView_error"
        android:layout_alignParentTop="true"
        android:textColor="#ff0000"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:layout_marginLeft="15dp" />

</RelativeLayout>
